--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         function generateProblem() {
             let num1 = Math.floor(Math.random() * 99) + 1;  // Random number between 1 and 9
             let num2 = Math.floor(Math.random() * 9) + 1;  // Random number between 1 and 9
-            currentProblemAnswer = num1 + num2;  // Calculate the answer
-            document.getElementById("problem").innerText = `${num1} + ${num2} = ?`;
+            currentProblemAnswer = num1 * num2;  // Calculate the answer
+            document.getElementById("problem").innerText = `${num1} x ${num2} = ?`;
         }
 
         function startTrial() {
