Removed name from index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music 1A Research Project- Richard Wang</title>
+    <title>Music 1A Research Project</title>
 </head>
 <body>
-    <h1>Music 1A Research Project- Richard Wang</h1>
+    <h1>Music 1A Research Project</h1>
 
     <div id="intro">
         <p>Thank you for participating in my Music 1A research project! In this task, you will complete
